try other methods of extracting subtitles when standard fails

--- a/script.xbmc.subtitles/resources/language/English/strings.xml
+++ b/script.xbmc.subtitles/resources/language/English/strings.xml
@@ -76,6 +76,12 @@
     <string id="30145">Use 'Subs' subfolder for storing subtitles</string>
     <string id="30146">- napisy24.pl Username</string>
     <string id="30147">- napisy24.pl Password</string>
+    <string id="30148">Try other methods if subtitles extract fails</string>
+    <string id="30149">- 7zip path (leave empty for standard)</string>
+    <string id="30150">- Unzip path (leave empty for standard)</string>
+    <string id="30151">- Unrar path (leave empty for standard)</string>
+    
+    
     
   <!-- Languages  -->
   
